
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* desc; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 TYPE_1__* ht ;
 int printf (char*) ;
 int stderr ;

void show_code_list()
{
        int i;
        fprintf( stderr, "[+] SHELLCODES\n\n");
        for (i = 0 ; ht[ i ].desc ; i++ )
                fprintf ( stderr, " %d - %s\n", i, ht[ i ].desc );
        printf("\n");
        exit( EXIT_FAILURE );
}
